.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glfstmplt9__c.object
<CustomObject>
    <description>glfstmplt9__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfstmplt9_glcmp__r.Name &amp; &apos;_&apos; &amp;  rstkf__glfstmplt9_exportlabel__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glfstmplt9_glcmp__r.Name &amp; &apos;-&apos; &amp; rstkf__glfstmplt9_exportlabel__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt9_exportlabel__c</fullName>
        <label>External Data Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt9_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Line Export labels</relationshipLabel>
        <relationshipName>glfstmplt9s01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt9_glfstmplt4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Used in line</label>
        <referenceTo>rstkf__glfstmplt4__c</referenceTo>
        <relationshipLabel>Line Export labels</relationshipLabel>
        <relationshipName>glfstmplt9s02</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Line Export label</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Export labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>